--- a/website/resources/public/styles.css
+++ b/website/resources/public/styles.css
@@ -37,7 +37,8 @@ body {
 
 #map-container {
   height: 300px;
-  width: 100%;
+  width: 75%;
+  margin: 0 auto;
   margin-bottom: 1rem; /* Add some space below the map */
 }
 
