--- a/website/resources/public/styles.css
+++ b/website/resources/public/styles.css
@@ -43,6 +43,11 @@ body {
   margin-bottom: 1rem; /* Add some space below the map */
 }
 
+.coordinate-input {
+  flex-grow: 1;
+  margin-right: 10px;
+}
+
 .add-stand-btn {
   background-color: #4CAF50;
   border: none;
