--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -313,3 +313,11 @@ body {
 .error-message {
   color: red;
 }
+
+.product-list {
+  border: 1px solid #ccc;
+  padding: 0.5rem 1rem;
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+}
