--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -276,7 +276,7 @@ body {
 }
 
 .loading-overlay {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100%;
@@ -286,7 +286,7 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  z-index: 1001; /* Higher than form-overlay */
+  z-index: 1001;
 }
 
 .spinner {
