--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -1,7 +1,21 @@
+#fixed-header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
+  background-color: #f8f8f8; /* Light grey background */
+  padding: 10px 20px 0 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Subtle shadow */
+  z-index: 1000; /* Ensure it stays on top of other content */
+  box-sizing: border-box; /* Include padding in the width */
+}
+
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  padding-top: 460px; /* Adjust body padding to prevent content from being hidden below the fixed container */
 }
 
 .app-container {
@@ -10,12 +24,17 @@ body {
   margin: 0 auto;
 }
 
+.app-container-fixed-content {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 .header {
   display: flex;
   align-items: center;
   gap: 1rem;
-  margin-bottom: 1rem;
-  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  margin-top: 0.25rem;
 }
 
 .logo {
@@ -40,7 +59,7 @@ body {
   height: 350px;
   width: 75%;
   margin: 0 auto;
-  margin-bottom: 1rem; /* Add some space below the map */
+  margin-bottom: 0.5rem; /* Add some space below the map */
 }
 
 #map-form {
@@ -63,7 +82,7 @@ body {
   font-size: 16px;
   cursor: pointer;
   border-radius: 4px;
-  margin-bottom: 1rem;
+  margin-bottom: 0.5rem;
 }
 
 .add-stand-btn:hover {
@@ -136,7 +155,7 @@ body {
   width: 90%;
   box-sizing: border-box;
   padding: 1rem 2rem;
-  background-color: white;
+  background-color: #f8f8f8; /* Light grey background */
   border: 1px solid #ddd;
   box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); /* Added shadow */
   z-index: 1001;
@@ -345,8 +364,8 @@ body {
 .product-list {
   border: 1px solid #ccc;
   padding: 0.5rem 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
   border-radius: 8px;
 }
 
@@ -364,7 +383,7 @@ body {
   border-radius: 4px;
   cursor: pointer;
   font-size: 14px;
-  margin-top: 0.5rem;
+  margin-top: 0.25rem;
 }
 
 .clear-filter-btn:hover {
