--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -9,13 +9,14 @@
   box-shadow: 0 2px 5px rgba(0,0,0,0.1); /* Subtle shadow */
   z-index: 1000; /* Ensure it stays on top of other content */
   box-sizing: border-box; /* Include padding in the width */
+  height: 39vh;
 }
 
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
-  padding-top: 460px; /* Adjust body padding to prevent content from being hidden below the fixed container */
+  padding-top: 40vh; /* Adjust body padding to prevent content from being hidden below the fixed container */
 }
 
 .app-container {
@@ -56,7 +57,7 @@ body {
 }
 
 #map-container {
-  height: 350px;
+  height: 30vh;
   width: 75%;
   margin: 0 auto;
   margin-bottom: 0.5rem; /* Add some space below the map */
