--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -294,36 +294,43 @@ body {
   margin: 0;
 }
 
-.delete-stand-btn {
-  background-color: #ff4444;
+.stand-actions {
+  display: flex;
+  gap: 0.5rem;
+}
+
+.delete-stand-btn, .edit-stand-btn, .go-stand-btn {
   color: white;
   border: none;
   padding: 6px 12px;
   border-radius: 4px;
   font-size: 0.845rem;
   cursor: pointer;
+}
+
+.delete-stand-btn {
+  background-color: #ff4444;
 }
 
 .delete-stand-btn:hover {
   background-color: #cc0000;
 }
 
-.stand-actions {
-  display: flex;
-  gap: 0.5rem;
-}
-
 .edit-stand-btn {
   background-color: #007bff;
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  font-size: 0.845rem;
-  cursor: pointer;
 }
 
 .edit-stand-btn:hover {
+  background-color: #0056b3;
+}
+
+.go-stand-btn {
+  display: inline-block;
+  background-color: #4CAF50;
+  text-decoration: none;
+}
+
+.go-stand-btn:hover {
   background-color: #0056b3;
 }
 
@@ -362,7 +369,7 @@ body {
   color: darkred;
   background-color: white;
   border: 1px solid darkred;
-  padding: 4px 8px 8px 8px;
+  padding: 2px 4px 4px 4px;
   border-radius: 4px;
   display: flex;
   align-items: center;
@@ -473,22 +480,6 @@ body {
 }
 
 .add-product-btn:hover {
-  background-color: #0056b3;
-}
-
-.coordinate-link {
-  display: inline-block;
-  background-color: #4CAF50;
-  color: white;
-  border: none;
-  padding: 6px 12px;
-  border-radius: 4px;
-  font-size: 0.845rem;
-  cursor: pointer;
-  text-decoration: none;
-}
-
-.coordinate-link:hover {
   background-color: #0056b3;
 }
 
