--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -117,7 +117,6 @@ body {
 
 .form-container {
   background: white;
-  padding: 0.5rem 1rem 1rem 1rem;
   border-radius: 8px;
   box-sizing: border-box;
   min-width: 400px;
@@ -133,6 +132,7 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  padding: 0.5em;
   margin-bottom: 0.25rem;
   flex-shrink: 0;
 }
@@ -213,7 +213,7 @@ body {
   flex-grow: 1;
   overflow-x: hidden;
   overflow-y: auto;
-  padding 0.5em 0;
+  padding: 0.5em;
 }
 
 .stand-item {
