--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -133,6 +133,7 @@ body {
   justify-content: space-between;
   align-items: center;
   padding: 0.5em;
+  padding-top: 2em;
   margin-bottom: 0.25rem;
   flex-shrink: 0;
 }
@@ -144,6 +145,10 @@ body {
 .form-header-buttons {
   display: flex;
   gap: 0.5rem;
+}
+
+.form-header-buttons .button {
+  padding: 8px 48px;
 }
 
 .button {
