--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -126,6 +126,7 @@ body {
   flex-direction: column;
   height: 95vh;
   max-height: 95vh;
+  padding-bottom: 2rem;
 }
 
 .form-header-actions {
@@ -219,6 +220,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0.5em;
+  padding-bottom: 2em;
 }
 
 .stand-item {
