--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -1,11 +1,18 @@
 html {
   font-size: 18px; /* Define 1rem as 18px */
+  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 body {
   font-family: Arial, sans-serif;
   margin: 0;
   padding: 0;
+  height: 100%;
+  position: fixed;
+  overflow-y: scroll;
+  -webkit-overflow-scrolling: touch; /* For smooth scrolling on iOS */
 }
 
 .app-container {
