--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -211,6 +211,10 @@ body {
   box-sizing: border-box;
 }
 
+.form-group input.checkbox {
+  width: auto;
+}
+
 .form-group textarea {
   width: 100%;
   padding: 8px;
