--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -196,6 +196,13 @@ body {
   padding: 0.25em;
 }
 
+.product-section-wrapper {
+  border: 1px solid #ccc;
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border-radius: 8px;
+}
+
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
