--- a/website/public/styles.css
+++ b/website/public/styles.css
@@ -239,7 +239,7 @@ body {
   overflow-x: hidden;
   overflow-y: auto;
   padding: 0.5em;
-  padding-bottom: 2em;
+  padding-bottom: 50vh;
 }
 
 .stand-item {
@@ -601,6 +601,7 @@ body {
   padding: 1rem;
   flex-grow: 1;
   overflow-y: auto;
+  padding-bottom: 50vh;
 }
 
 .settings-actions {
